- ingest ClinGen gene dosage data - use silent genes library